--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
     <p>A place with you will find the food you have been craving!</p>
     <p style="font-size: 12px;">&#169;2018 ZOMATO ALL RIGHTS RESERVED.</p>
   </footer>
-<script type="text/javascript" src="static/js/jquery3.3.1.min.js"></script>
+<script type="text/javascript" src="static/js/jquery.js"></script>
 <script type="text/javascript" src="static/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="static/js/angular.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.min.js"></script>
